[project]
name = "docs"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-video",
    "mkdocstrings[python]",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
    "mkdocs-mermaid2-plugin",
    "beautifulsoup4",
    "mike",
]

[tool.uv]
package = false
